# prebuild_deps

./: .gitignore  .gitmodules  CMakeLists.txt  readme.md  submodule_init.sh
cmake/: fix_tools_permissions_and_PATH.cmake  get_prebuild_install_name.cmake  mingw_check.cmake
patches/: luajit_msvcrt_fix.patch  rlottie_install_dir_fix.patch  rlottie_msvcrt_fix.patch  rmlui_fix_luajit_search.patch
scripts/: luajit_install.sh  pack_install_dir.py
tools/nasm/Linux/: ndisasm
